--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "test": "grunt"
   },
   "dependencies": {
-    "bunyan": "~1.2.1",
-    "lodash": "~2.4.1",
-    "rollbar": "~0.4.0"
+    "bunyan": "~1.8.12",
+    "lodash": "~4.17.10",
+    "mocha": "^5.2.0",
+    "rollbar": "~2.4.0"
   },
   "devDependencies": {
-    "chai": "~1.9.2",
-    "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-mocha-test": "~0.12.2",
-    "mversion": "~1.7.0",
-    "sinon": "~1.11.1"
+    "chai": "~4.1.2",
+    "grunt": "~1.0.2",
+    "grunt-cli": "~1.2.0",
+    "grunt-contrib-jshint": "~1.1.0",
+    "grunt-mocha-test": "~0.13.3",
+    "mversion": "~1.10.1",
+    "sinon": "~5.0.10"
   },
   "repository": {
     "type": "git",
